--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -70,9 +70,6 @@
             <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
               >Education</a
             >
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
-              >Commerce</a
-            >
           </div>
           <!-- <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -124,9 +121,6 @@
             <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
               >Education</a
             >
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
-              >Commerce</a
-            >
           </div>
           <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -141,6 +135,14 @@
         <h4 class="card-title">Self Learning Books</h4>
         <h6 class="card-subtitle mb-5 text-muted">Personal development | Finance</h6>
         <a href="/personalbook" class="card-link">View more</a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 card" style="width: 22rem" id="classes">
+      <div class="card-body">
+        <h4 class="card-title">SAT & Ielts Books</h4>
+        <h6 class="card-subtitle mb-5 text-muted">English Test | US</h6>
+        <a href="/sat" class="card-link">View more</a>
       </div>
     </div>
 
