--- a/memorivise/templates/learning.html
+++ b/memorivise/templates/learning.html
@@ -2,11 +2,11 @@
 <title>Study games</title>
 {% endblock title%} {% block body%}
 <hr />
-<h2 class="text-center">Study games</h2>
+<h2 class="text-center">Learning Techniques</h2>
 <hr />
 <div class="icon-container">
     <figure>
-      <a href=""><img src="..\static\img\simulearn.png"></a>
+      <a href="/simulations"><img src="..\static\img\simulearn.png"></a>
       <figcaption><b>Simulations</b></figcaption>
     </figure>
     <figure>
