--- a/memorivise/templates/sat.html
+++ b/memorivise/templates/sat.html
@@ -1,43 +1,27 @@
 {% extends 'base.html' %} {% block title%}
-<title>Self Learning Books</title>
+<title>SAT, Ielts and Language Books</title>
 {% endblock title%} {% block body %}
 
 <body>
     <div class="container">
         <hr />
-        <h2 class="text-center">Self Learning Books</h2>
+        <h2 class="text-center">SAT, Ielts and Language Books</h2>
         <hr />
         <div class="row">
             <div class="card-list">
                 <div class="card">
-                    <img src="../static/img/books/rich_dad_poor_dad.jpg" class="card-img-top" alt="...">
+                    <img src="../static/img/books/s1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Rich Dad Poor Dad</h5>
+                        <h5 class="card-title">Collage Panda</h5>
                         <a href="#" class="btn btn-primary">Read & Download</a>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img src="../static/img/books/Atomic_Habits.jpg" class="card-img-top" alt="...">
+                    <img src="../static/img/books/s2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Atomic Habits</h5>
+                        <h5 class="card-title">Erica L. Meltzer</h5>
                         <a href="#" class="btn btn-primary">Read & Download</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="../static/img/books/think.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Think and Grow Rich</h5>
-                        <a href="#" class="btn btn-primary">Read & Download</a>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <img src="../static/img/books/psx.jpg" class="card-img-top"  alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Psychology of Money</h5>
-                        <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
                     </div>
                 </div>
 
