--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -10,26 +10,147 @@
     </header>
     <hr />
     <h2 class="text-center">Science Books- Physics</h2>
-  </div>
-  <div class="row">
-    <div class="book-slider">
-      <div class="wraper">
-        <a href=""><img src="..\static\img\books\university.jpg" height="200px" width="150px" id="bk"></a>
+    <hr />
+    <div class="row">
+      <div class="card-list">
+        <div class="card">
+          <img src="../static/img/books/university.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">University Physics</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/fundamnetal.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Fundamnetals of Physics</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/p11.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Modern Physics</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/p12.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">McGraw Hill Physics</h5>
+            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <img src="..\static\img\books\stand.png" class="stand">
+
+    <hr />
+    <h2 class="text-center">Science Books- Chemistry</h2>
+    <hr />
+    <div class="row">
+      <div class="card-list">
+        <div class="card">
+          <img src="../static/img/books/c12.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Atkins PhysicalChemistry</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/c13.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Franis A. Organic</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/c14.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Concise Inorganic</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/c15.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Peter Skys Organic</h5>
+            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+    <h2 class="text-center">Science Books- Biology</h2>
+    <hr />
+    <div class="row">
+      <div class="card-list">
+        <div class="card">
+          <img src="../static/img/books/b11.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Campbell Biology</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/b12.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ravin Biology</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/c14.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Concise Inorganic</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/p12.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">McGraw Hill Physics</h5>
+            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 <style>
-  .wraper a {
-    align-items: center;
-  }
+ .card {
+        width: 15.5rem;
+        height: 370px;
+        border-radius: 20px;
+        background-color: rgb(158, 144, 124);
+        float: left;
+        margin-right: 15px;
+        margin-left: 15px;
+    }
 
-  .wraper a img {
-    align-items: center;
-    margin-left: 20px;
-  }
+    .card img {
+        border-radius: 20px;
+        height: 70%;
+        width: 100%;
+    }
+    .card-body h5{
+        font-family: 'Times New Roman', Times, serif;
+        text-align: center;
+    }
+    .card-body a {
+        width: auto;
+        margin-left: 20px;
+    }
+
 </style>
 {% endblock body %}
