--- a/memorivise/templates/studygames.html
+++ b/memorivise/templates/studygames.html
@@ -7,15 +7,15 @@
 <div class="icon-container">
     <figure>
       <a href="/quiz"><img src="..\static\img\quiz.png"></a>
-      <figcaption><b>quizzes</b></figcaption>
+      <figcaption><b>Quizzes</b></figcaption>
     </figure>
     <figure>
       <a href="#"><img src="..\static\img\matching.jpeg"></a>
-      <figcaption><b>Matching game</b></figcaption>
+      <figcaption><b>Matching Game</b></figcaption>
     </figure>
     <figure>
         <a href="#"><img src="..\static\img\simulation.jpg"></a>
-        <figcaption><b>Simulation game</b></figcaption>
+        <figcaption><b>Simulation Game</b></figcaption>
       </figure>
   </div>
   <style>
