--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -57,14 +57,14 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <!-- <a class="dropdown-item" >Resources</a> -->
-                  <a class="dropdown-item dropdown-toggle" id="resource-drop">Resources</a>
-                  <div class="dropdown-submenu" >
+                  <a class="dropdown-item" id="resource-drop" href="/resources" >Resources</a>
+                  <!-- <div class="dropdown-submenu" >
                     <ul class="dropdown-menu" id="resource-dropdown-menu">
                       <li><a class="dropdown-item" href="/books">Books & Notes</a></li>
                       <li><a class="dropdown-item" href="/learning">Learning Techniques</a></li>
                       <li><a class="dropdown-item" href="/studygames">Games</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </li> 
                 
                     
