--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -24,7 +24,7 @@
       <div class="card-body">
         <h4 class="card-title">Class 10</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a href="#" class="card-link">View more</a>
+        <a href="/class10" class="card-link">View more</a>
       </div>
     </div>
 
