--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -125,6 +125,70 @@
       </div>
     </div>
 
+    <hr />
+    <h2 class="text-center">Compulsory Books</h2>
+    <hr />
+    <div class="row">
+      <div class="card-list">
+        <div class="card">
+          <img src="../static/img/books/english12.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">English</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/nepali12.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nepali</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/social112.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Social studies</h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+    <h2 class="text-center">Plant Science</h2>
+    <hr />
+    <div class="row">
+      <div class="card-list">
+        <div class="card">
+          <img src="../static/img/books/plant1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sustainable Nutrient 
+              </h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/plant2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Commercial Mushroom 
+          </h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../static/img/books/plant3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> Commercial Vegetable </h5>
+            <a href="#" class="btn btn-primary">Read & Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 <style>
