quiz submit log

--- a/memorivise/templates/learning.html
+++ b/memorivise/templates/learning.html
@@ -10,10 +10,6 @@
       <figcaption><b>Simulations</b></figcaption>
     </figure>
     <figure>
-      <a href="#"><img src="..\static\img\simulearn.png"></a>
-      <figcaption><b>Tricks</b></figcaption>
-    </figure>
-    <figure>
         <a href="#"><img src="..\static\img\simulearn.png"></a>
         <figcaption><b>Videos</b></figcaption>
       </figure>
@@ -22,12 +18,14 @@
       img {
     float: left;
     height: 400px;
-    width: 320px;
+    width: 400px;
     border-radius: 20%;
   }
 
   .icon-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .icon-container figure {
