--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -10,14 +10,14 @@
       <div class="card-body">
         <h4 class="card-title">Class 8</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a href="#" class="card-link">View more</a>
+        <a href="/class8" class="card-link">View more</a>
       </div>
     </div>
     <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Class 9</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a href="#" class="card-link">View more</a>
+        <a href="/class9" class="card-link">View more</a>
       </div>
     </div>
     <div class="col-lg-4 card" style="width: 22rem" id="classes">
