class 11 and simulations

--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -61,7 +61,7 @@
             ></button>
           </div>
           <div class="modal-body text-center">
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+            <a href="/class11science" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
               >Science</a
             >
             <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
