--- a/memorivise/templates/class9.html
+++ b/memorivise/templates/class9.html
@@ -19,6 +19,38 @@
             </div>
           </div>
 
+          <div class="card">
+            <img src="../static/img/books/class9english.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">English</h5>
+              <a href="#" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../static/img/books/class9science.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">विज्ञान</h5>
+              <a href="#" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../static/img/books/class9math.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">गणित</h5>
+              <a href="#" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../static/img/books/class9social.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">सामाजिक अध्ययन</h5>
+              <a href="#" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
       </div>
     </div>
     <style>
