--- a/memorivise/templates/simulations.html
+++ b/memorivise/templates/simulations.html
@@ -15,6 +15,20 @@
 
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
+        <h4 class="card-title">Simple Pendulum</h4>
+        <a href="/simplependulum" class="card-link">View this </a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 card" style="width: 18rem" id="classes">
+      <div class="card-body">
+        <h4 class="card-title">Ohm's Law</h4>
+        <a href="/ohm" class="card-link">View this </a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 card" style="width: 18rem" id="classes">
+      <div class="card-body">
         <h4 class="card-title">Tidal hypothesis</h4>
         <a href="#" class="card-link">View this </a>
       </div>
@@ -23,7 +37,7 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Force</h4>
-        <a href="#" class="card-link">View this </a>
+        <a href="/force" class="card-link">View this </a>
       </div>
     </div>
 
