--- a/memorivise/templates/simulations.html
+++ b/memorivise/templates/simulations.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block title%}
-<title>Quiz</title>
+<title>Simulations</title>
 {% endblock title%} {% block body%}
 <div class="container">
   <hr />
@@ -30,7 +30,7 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Tidal hypothesis</h4>
-        <a href="#" class="card-link">View this </a>
+        <a href="/tidal" class="card-link">View this </a>
       </div>
     </div>
 
