--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -48,8 +48,8 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/revise">Revise</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Doubts</a></li>
+                <!-- <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Doubts</a></li> -->
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="/memorivise">Memorivise</a>
