--- a/memorivise/templates/class9.html
+++ b/memorivise/templates/class9.html
@@ -15,7 +15,7 @@
             <img src="../static/img/books/class9neplai.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nepali</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class9/class9_Nepali.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
 
@@ -23,7 +23,7 @@
             <img src="../static/img/books/class9english.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">English</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class9/class9_English.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
 
@@ -31,7 +31,7 @@
             <img src="../static/img/books/class9science.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">विज्ञान</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class9/class9_science.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
 
@@ -39,7 +39,7 @@
             <img src="../static/img/books/class9math.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">गणित</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class9/class9_Math.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
 
@@ -47,7 +47,7 @@
             <img src="../static/img/books/class9social.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">सामाजिक अध्ययन</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class9/class9Social.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
 
