--- a/memorivise/templates/resources.html
+++ b/memorivise/templates/resources.html
@@ -24,9 +24,10 @@
     </figure>
     <figure>
       <a href="/studygames"><img src="..\static\img\books\stgm21.jpg"></a>
-      <figcaption><b>Study games</b></figcaption>
+      <figcaption><b>Entrances and MCQ's</b></figcaption>
     </figure>
   </div>
+  
 </body>
 <style>
   h1 {
