--- a/memorivise/templates/personalbook.html
+++ b/memorivise/templates/personalbook.html
@@ -13,7 +13,7 @@
                     <img src="../static/img/books/rich_dad_poor_dad.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Rich Dad Poor Dad</h5>
-                        <a href="#" class="btn btn-primary">Read & Download</a>
+                        <a href="../static/book/Rich dad poor dad.pdf" class="btn btn-primary">Read & Download</a>
                     </div>
                 </div>
 
@@ -21,7 +21,7 @@
                     <img src="../static/img/books/Atomic_Habits.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Atomic Habits</h5>
-                        <a href="#" class="btn btn-primary">Read & Download</a>
+                        <a href="../static/book/atomic-habits.pdf" class="btn btn-primary">Read & Download</a>
                     </div>
                 </div>
 
@@ -29,7 +29,7 @@
                     <img src="../static/img/books/think.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Think and Grow Rich</h5>
-                        <a href="#" class="btn btn-primary">Read & Download</a>
+                        <a href="../static/book/Think-and-Grow-Rich-Napoleon-Hill.pdf" class="btn btn-primary">Read & Download</a>
                     </div>
                 </div>
 
