--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -17,7 +17,7 @@
           <img src="../static/img/books/university.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">University Physics</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static//book/class12/University Physics with Modern Physics (14th edition) [Dr.Soc].pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -25,7 +25,7 @@
           <img src="../static/img/books/fundamnetal.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Fundamnetals of Physics</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/Fundamentals of Physics [10th Edition] - Halliday _ Resnick.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -33,7 +33,7 @@
           <img src="../static/img/books/p11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Modern Physics</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/_modern-physics-6th-edition-tipler-llewellyn.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -41,7 +41,7 @@
           <img src="../static/img/books/p12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">McGraw Hill Physics</h5>
-            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+            <a href="../static/book/class12/mcgraw-hill-ryerson-physics-12.pdf" class="btn btn-primary" mx-1>Read & Download</a>
           </div>
         </div>
       </div>
@@ -134,7 +134,7 @@
           <img src="../static/img/books/english12.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">English</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/class-12-english-book.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -142,7 +142,7 @@
           <img src="../static/img/books/nepali12.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nepali</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/Nepali 12 -The SR Zone.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -150,7 +150,7 @@
           <img src="../static/img/books/social112.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Social studies</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/CDC Official Social-12 Book [tsz.com.np] .pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="card-body">
             <h5 class="card-title">Sustainable Nutrient 
               </h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/RS3782_Grade_-_12_Sustainable_Integrated_Nutrient_and_pest_Management.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -175,7 +175,7 @@
           <div class="card-body">
             <h5 class="card-title">Commercial Mushroom 
           </h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/RS3779_Grade_-_12_Commercial_Mushroom_Production_and_Marketing.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -183,7 +183,7 @@
           <img src="../static/img/books/plant3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Commercial Vegetable </h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/RS3780_Grade_-_12_Commercial_Vegetable_Production_and_Marketing.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
       </div>
