--- a/memorivise/templates/class10.html
+++ b/memorivise/templates/class10.html
@@ -15,7 +15,7 @@
           <img src="../static/img/books/class10p2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Farm Management</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class10/Grade_-_10_Plant_Animal_Science_-_Farm_Management_and_Marketing.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -23,7 +23,7 @@
           <img src="../static/img/books/class10p2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Foliculture Management</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class10/Grade_-_10_Plant_Science_-_Floriculture_and_Nursery_Management.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -31,7 +31,7 @@
           <img src="../static/img/books/class10p3.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Aquaculture & Fisheries</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class10/Grade_-_10_Plant_Animal_Science_-_Aquaculture_and_Fisheries.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -39,7 +39,7 @@
           <img src="../static/img/books/class10p4.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Vegetable & Medicinal</h5>
-            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+            <a href="../static/book/class10/Grade_-_10_Plant_Science_-_Vegetabe_and_Medicinal_Plant_Production.pdf" class="btn btn-primary" mx-1>Read & Download</a>
           </div>
         </div>
 
@@ -47,7 +47,23 @@
             <img src="../static/img/books/class10english.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">English</h5>
-              <a href="#" class="btn btn-primary">Read & Download</a>
+              <a href="../static/book/class10/english.pdf" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../static/img/books/class10nepali.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nepali</h5>
+              <a href="../static/book/class10/nepali.pdf" class="btn btn-primary">Read & Download</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="../static/img/books/class10math.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Math</h5>
+              <a href="../static/book/class10/math.pdf" class="btn btn-primary">Read & Download</a>
             </div>
           </div>
   
@@ -60,10 +76,10 @@
           </div>
   
           <div class="card">
-            <img src="../static/img/books/class10science.jpg" class="card-img-top" alt="...">
+            <img src="../static/img/books/class10social.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Science</h5>
-              <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+              <h5 class="card-title">Social</h5>
+              <a href="../static/book/class10/social.pdf" class="btn btn-primary" mx-1>Read & Download</a>
             </div>
           </div>
 
